# rust-secrets-manager

./: .gitignore  Cargo.toml  README.md
rsm-cli/: Cargo.toml  README.md
rsm-cli/src/: cli.rs  main.rs
rsm-core/: Cargo.toml
rsm-core/src/: lib.rs  storage.rs  vault.rs
rsm-dioxus/: Cargo.toml  Dioxus.toml  README.md
rsm-dioxus/src/: main.rs  vault_gui.rs
rsm-dioxus/src/views/: add_view.rs  delete_view.rs  get_view.rs  init_view.rs  list_view.rs  mod.rs  update_view.rs
src/: cli.rs  crypto.rs  error.rs  main.rs  storage.rs  vault.rs
