[package]
name = "rsm"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Easy idiomatic error handling
anyhow = { version = "1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encryption phase (later)
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.9.2"

# Memory safety (later)
zeroize = "1"