[package]
name = "rsm-dioxus"
version = "0.1.0"
authors = ["zeuchie <48141433+zeuchie@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
lucide-dioxus = { version = "2.561.0", features = ["all-icons"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
